Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UCharacterMovementComponent.h

	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateTickRegistration(UCharacterMovementComponent* Self)
	{
		Self->UpdateTickRegistration();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_Activate(UCharacterMovementComponent* Self, bool bReset)
	{
		auto _p0 = bReset;
		Self->Activate(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_AddTickPrerequisiteActor(UCharacterMovementComponent* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->AddTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_AddTickPrerequisiteComponent(UCharacterMovementComponent* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->AddTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_BeginPlay(UCharacterMovementComponent* Self)
	{
		Self->BeginPlay();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_CreateRenderState_Concurrent(UCharacterMovementComponent* Self)
	{
		Self->CreateRenderState_Concurrent();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_DestroyComponent(UCharacterMovementComponent* Self, bool bPromoteChildren)
	{
		auto _p0 = bPromoteChildren;
		Self->DestroyComponent(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_DestroyRenderState_Concurrent(UCharacterMovementComponent* Self)
	{
		Self->DestroyRenderState_Concurrent();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetComponentClassCanReplicate(UCharacterMovementComponent* Self)
	{
		return Self->GetComponentClassCanReplicate();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetReadableName(UCharacterMovementComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetReadableName());
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_HasValidPhysicsState(UCharacterMovementComponent* Self)
	{
		return Self->HasValidPhysicsState();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_InvalidateLightingCacheDetailed(UCharacterMovementComponent* Self, bool bInvalidateBuildEnqueuedLighting, bool bTranslationOnly)
	{
		auto _p0 = bInvalidateBuildEnqueuedLighting;
		auto _p1 = bTranslationOnly;
		Self->InvalidateLightingCacheDetailed(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsActive(UCharacterMovementComponent* Self)
	{
		return Self->IsActive();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsEditorOnly(UCharacterMovementComponent* Self)
	{
		return Self->IsEditorOnly();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsNameStableForNetworking(UCharacterMovementComponent* Self)
	{
		return Self->IsNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsNavigationRelevant(UCharacterMovementComponent* Self)
	{
		return Self->IsNavigationRelevant();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsReadyForOwnerToAutoDestroy(UCharacterMovementComponent* Self)
	{
		return Self->IsReadyForOwnerToAutoDestroy();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsSupportedForNetworking(UCharacterMovementComponent* Self)
	{
		return Self->IsSupportedForNetworking();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_MarkAsEditorOnlySubobject(UCharacterMovementComponent* Self)
	{
		Self->MarkAsEditorOnlySubobject();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_NeedsLoadForClient(UCharacterMovementComponent* Self)
	{
		return Self->NeedsLoadForClient();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_NeedsLoadForEditorGame(UCharacterMovementComponent* Self)
	{
		return Self->NeedsLoadForEditorGame();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_NeedsLoadForServer(UCharacterMovementComponent* Self)
	{
		return Self->NeedsLoadForServer();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_OnActorEnableCollisionChanged(UCharacterMovementComponent* Self)
	{
		Self->OnActorEnableCollisionChanged();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_OnComponentCreated(UCharacterMovementComponent* Self)
	{
		Self->OnComponentCreated();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_OnComponentDestroyed(UCharacterMovementComponent* Self, bool bDestroyingHierarchy)
	{
		auto _p0 = bDestroyingHierarchy;
		Self->OnComponentDestroyed(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_OnCreatePhysicsState(UCharacterMovementComponent* Self)
	{
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->OnCreatePhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_OnDestroyPhysicsState(UCharacterMovementComponent* Self)
	{
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->OnDestroyPhysicsState_WRAP();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_OnUnregister(UCharacterMovementComponent* Self)
	{
		Self->OnUnregister();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_PostInitProperties(UCharacterMovementComponent* Self)
	{
		Self->PostInitProperties();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_PostNetReceive(UCharacterMovementComponent* Self)
	{
		Self->PostNetReceive();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_PostRename(UCharacterMovementComponent* Self, UObject* OldOuter, char* OldName)
	{
		auto _p0 = OldOuter;
		auto _p1 = ConvertFromManage_FName(OldName);
		Self->PostRename(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_PreNetReceive(UCharacterMovementComponent* Self)
	{
		Self->PreNetReceive();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_RemoveTickPrerequisiteActor(UCharacterMovementComponent* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->RemoveTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_RemoveTickPrerequisiteComponent(UCharacterMovementComponent* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->RemoveTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_RequiresGameThreadEndOfFrameRecreate(UCharacterMovementComponent* Self)
	{
		return Self->RequiresGameThreadEndOfFrameRecreate();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_RequiresGameThreadEndOfFrameUpdates(UCharacterMovementComponent* Self)
	{
		return Self->RequiresGameThreadEndOfFrameUpdates();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SendRenderDynamicData_Concurrent(UCharacterMovementComponent* Self)
	{
		((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->SendRenderDynamicData_Concurrent_WRAP();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SendRenderTransform_Concurrent(UCharacterMovementComponent* Self)
	{
		Self->SendRenderTransform_Concurrent();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetActive(UCharacterMovementComponent* Self, bool bNewActive, bool bReset)
	{
		auto _p0 = bNewActive;
		auto _p1 = bReset;
		Self->SetActive(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetAutoActivate(UCharacterMovementComponent* Self, bool bNewAutoActivate)
	{
		auto _p0 = bNewAutoActivate;
		Self->SetAutoActivate(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetComponentTickEnabled(UCharacterMovementComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabled(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_SetComponentTickEnabledAsync(UCharacterMovementComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetComponentTickEnabledAsync(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldActivate(UCharacterMovementComponent* Self)
	{
		return ((E_PROTECTED_WRAP_UCharacterMovementComponent*)Self)->ShouldActivate_WRAP();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldCreatePhysicsState(UCharacterMovementComponent* Self)
	{
		return Self->ShouldCreatePhysicsState();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ShouldCreateRenderState(UCharacterMovementComponent* Self)
	{
		return Self->ShouldCreateRenderState();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_ToggleActive(UCharacterMovementComponent* Self)
	{
		Self->ToggleActive();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UninitializeComponent(UCharacterMovementComponent* Self)
	{
		Self->UninitializeComponent();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_UpdateComponentToWorld(UCharacterMovementComponent* Self, EUpdateTransformFlags UpdateTransformFlags, ETeleportType Teleport)
	{
		auto _p0 = UpdateTransformFlags;
		auto _p1 = Teleport;
		Self->UpdateComponentToWorld(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_AreNativePropertiesIdenticalTo(UCharacterMovementComponent* Self, UObject* Other)
	{
		auto _p0 = Other;
		return Self->AreNativePropertiesIdenticalTo(_p0);
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_CheckDefaultSubobjectsInternal(UCharacterMovementComponent* Self)
	{
		return Self->CheckDefaultSubobjectsInternal();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_FinishDestroy(UCharacterMovementComponent* Self)
	{
		Self->FinishDestroy();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetDesc(UCharacterMovementComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDesc());
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_GetDetailedInfoInternal(UCharacterMovementComponent* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDetailedInfoInternal());
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsAsset(UCharacterMovementComponent* Self)
	{
		return Self->IsAsset();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsFullNameStableForNetworking(UCharacterMovementComponent* Self)
	{
		return Self->IsFullNameStableForNetworking();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsLocalizedResource(UCharacterMovementComponent* Self)
	{
		return Self->IsLocalizedResource();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsPostLoadThreadSafe(UCharacterMovementComponent* Self)
	{
		return Self->IsPostLoadThreadSafe();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsReadyForFinishDestroy(UCharacterMovementComponent* Self)
	{
		return Self->IsReadyForFinishDestroy();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_IsSafeForRootSet(UCharacterMovementComponent* Self)
	{
		return Self->IsSafeForRootSet();
	}
	DOTNET_EXPORT auto E_UCharacterMovementComponent_Modify(UCharacterMovementComponent* Self, bool bAlwaysMarkDirty)
	{
		auto _p0 = bAlwaysMarkDirty;
		return Self->Modify(_p0);
	}